// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders correctly renders correctly accessibility props 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={true}
    className="circle circleText"
    style={
      {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly an icon 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText"
    style={
      {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly square avatar 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText square"
    style={
      {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with badges 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText"
    style={
      {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
  <div
    className="badges"
  >
    <div
      className="badge badgeTopLeft"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge badgeTopRight"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge badgeBottomLeft"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge badgeBottomRight"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with damaged src badges 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText"
    style={
      {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
  <div
    className="badges"
  >
    <div
      className="badge badgeTopLeft"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge badgeTopRight"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge badgeBottomLeft"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
    <div
      className="badge badgeBottomRight"
    >
      <div
        data-testid="custom-icon-mock"
      />
    </div>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with empty props 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText"
    style={
      {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with image 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText"
    style={{}}
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with image and text 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText"
    style={{}}
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    >
      Name
    </span>
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with not valid image 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText"
    style={{}}
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
</div>
`;

exports[`Avatar renders correctly renders correctly with text 1`] = `
<div
  className="avatar large"
  data-testid="avatar"
  style={{}}
>
  <div
    aria-hidden={false}
    className="circle circleText"
    style={
      {
        "backgroundColor": "var(--color-chili-blue)",
      }
    }
    tabIndex={-1}
  >
    <span
      className="contentText contentTextLarge"
      data-testid="avatar-content"
    />
  </div>
</div>
`;
